First light functionality added

--- a/index.html
+++ b/index.html
@@ -26,6 +26,7 @@
                 <button class="incrementButton">+</button>
                 <button class="decrementButton">-</button>
             </div>
+            <button class="placeBet">Fire Off Guess</button>
         </div>
     </div>
     <script src="app.js"></script>
