--- a/index.html
+++ b/index.html
@@ -4,35 +4,70 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-BmbxuPwQa2lc/FVzBcNJ7UAyJxM6wuqIj61tLrc4wSX0szH/Ev+nYRRuWlolflfl" crossorigin="anonymous">
+<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta2/dist/js/bootstrap.bundle.min.js" integrity="sha384-b5kHyXgcpbZJO/tY9Ul7kGkf1S0CWuKcCD38l8YkeH8z8QjE0GmW1gYU5S9FOnJ0" crossorigin="anonymous"></script>
+<script src="https://code.jquery.com/jquery-3.5.1.min.js" integrity="sha256-9/aliU8dGd2tb6OSsuzixeV4y/faTqgFtohetphbbj0=" crossorigin="anonymous"></script>
+<script src="./TweenMax.min.js"></script>
+
     <link rel="stylesheet" href="style.css">
+
     <title>Number Guesser</title>
 </head>
 <body>
-    <section>
-    <h1>Number Guesser</h1>
-    <h1>Round <span class="roundNumber">1</span></h1>
-    <h1 style="text-align: center;">Target Number<span style="color:#1fffdf" class="targetNumber"><br><br>?</span></h1>
-    </section>
-    <div class="counterFrame">
-        <div style="background-color: #262948;border-radius: 5px; color:white">
-            <h1>Computer<br>
-    Score:<span class="targetScoreComputer"> 0</span></h1>
-    <h1 class="computerNumberInput">0</h1>
-        </div>
-        <div style="border: 2px solid #393f5b;border-radius: 5px;">
-            <h1>User<br>
-            Score:<span class="targetScoreUser"> 0</span></h1>
-            <h1 class="userNumberInput">0</h1>
-            <div class="buttonFrames">
-                <button class="incrementButton">+</button>
-                <button class="decrementButton">-</button>
+    <div class="cursor"></div>
+    <div class="cursor-follower"></div>
+    <header>
+        <h1>Number Guesser</h1>
+        <h2>Round <span class="roundNumber">1</span></h2>
+        <h1>Target Number<br><span style="color:#d75c3a" id="targetNumber">?</span></h1>
+    </header>
+    <div class="container">
+        <div class="row">
+            <div id="gameFrames" class="col-lg-5 col-sm-12">
+                <h2>Computer Score: <span class="computerScoreCount">0</span></h2>
+                <h1  style="color:#b1808d" class="display-1 computerPick">0</h1>
+                <h1  class="display-1 computerEmoji"></h1>
             </div>
-            <button class="placeBet"><h1>Fire Off Guess</h1></button>
+            <div class="col-lg-2"></div>
+            <div id="gameFrames" class="col-lg-5 col-sm-12">
+                <h2>User Score: <span class="userScoreCount">0</span></h2>
+                <h1 style="color: #808021;" id="userInputDisplay" class="display-1">0</h1>
+
+                <button class="incrementButton"><h1>+</h1></button>
+                <button class="decrementButton"><h1>-</h1></button>
+                <button class="guessButton"><h1>Guess</h1></button>
+            </div>
+        </div>
+      </div>
+<div class="nextRound">
+    <button class="nextRoundButton"><h2>Next Round</h2></button>
+</div>
+<div class="container" id="rulesFrame">
+    <div class="row">
+        
+        <div class="col-lg-2 col-sm-12">
+            <h4>Step 1</h4>
+                <h5>
+                Input a number between 0 and 10
+                </h5>
+        </div>
+<div class="col-3"></div>
+        <div class="col-lg-2 col-sm-12">
+            <h4>Step 2</h4>
+                <h5>
+                    Click "Guess" to submit your guess and see who won the round.
+                </h5>
+        </div>
+        <div class="col-3"></div>
+        <div class="col-lg-2 col-sm-12">
+            <h4>Step 3</h4>
+                <h5>
+                    Click "Next Round" to play again.
+                </h5>
         </div>
     </div>
-   <section>
-       <button style="color:white" class="newRound"><h1>New Round</h1></button>
-   </section>
-    <script src="app.js"></script>
+</div>
+   
+    <script src="app.js"  type="module"></script>
 </body>
 </html>
